--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,14 @@
+.brand-div{
+    display: flex;
+    align-items: center;
+}
 
-.img-cart{
+.brand-div .img-cart{
     width: 3rem;
     margin: 1rem;
 }
 
-h2{
+.brand-div h2{
     display: inline;
     text-shadow: 0 2px 7px black;
     font-size: 2rem;
