--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -2,8 +2,17 @@
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
+    flex-basis: 200px;
     margin: 2rem;
+    width: 90%;
+
+}
+
+.itemList-subtitulo{
+    width: 100%;
+    font-size: 2.5rem;
+    text-shadow: 1px 1px 5px #1118;
 }
