--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,30 +1,31 @@
+@import url('../../root.css');
+
 .item{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    /* background: linear-gradient(to bottom, #111 , #fff1); */
-    background: linear-gradient(-135deg, #0002, #fff1);
+    background: linear-gradient(to top left, var(--walnut-brown), var(--alpha-light));
     box-shadow: 7px 7px 12px 0 rgba(0, 0, 0, 0.25),
-   -5px -5px 12px 0 rgba(255, 255, 255, 0.3);
+    -5px -5px 12px 0 rgba(255, 255, 255, 0.3);
     padding: 1rem;
-    width: 300px;
-    min-height: 300px;
-    border-radius: 30px;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
     text-shadow: 1px 1px 5px #1117;
-
+    
 }
 
 .item img{
     width: 170px;
     filter: drop-shadow(0 0 5px black);
-
+    
 }
 .item:hover{
     cursor: pointer;
-    background: linear-gradient(135deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
-    box-shadow: inset -7px -7px 12px 0 rgba(0, 0, 0, 0.25),
+    background: linear-gradient(to bottom right, var(--walnut-brown), var(--alpha-light));
+    box-shadow: inset -7px -7px 12px rgba(0, 0, 0, 0.25),
     5px 5px 12px 0 rgba(255, 255, 255, 0.3);
 
 }
@@ -35,14 +36,29 @@
 
 @media screen and (max-width: 600px){
     .item{
-        width: 90%;
+        width: 100%;
+        height: fit-content;
         min-height: 250px;
-        border-radius: 1rem;
+        border-radius: 0;
     }
     
     .item img{
-        width: 100px;
+        width: 50%;
         filter: drop-shadow(0 0 5px black);
+    }
+    .item:hover > img{
+        transform: scale(1);
+    }
+    .item:hover{
+        cursor: pointer;
+        background: linear-gradient(to top left, var(--walnut-brown), var(--alpha-light));
+        box-shadow: 7px 7px 12px 0 rgba(0, 0, 0, 0.25),
+        -5px -5px 12px 0 rgba(255, 255, 255, 0.3);
+        }
+    .item:active{
+        background: linear-gradient(to bottom right, var(--walnut-brown), var(--alpha-light));
+        box-shadow: inset -7px -7px 12px rgba(0, 0, 0, 0.25),
+        5px 5px 12px 0 rgba(255, 255, 255, 0.3);;    
     }
     
 }
