--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -39,15 +39,18 @@ footer section aside ul li a{
 footer section{
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-start;
     width: 100%;
 }
 
-footer section aside{
+footer section .contacto{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+}
+
+footer section .redes{
+    justify-content: center;
 
 }
 
@@ -58,8 +61,4 @@ footer a{
 footer a:hover{
     color: #666;
     opacity: .9;
-}
-
-footer section .contacto p{
-    justify-content: center;
 }
