--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -12,13 +12,13 @@
     padding: 1rem;
     width: 400px;
     height: 400px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     text-shadow: 1px 1px 5px #1117;
     
 }
 
 .item img{
-    width: 170px;
+    width: 70%;
     filter: drop-shadow(0 0 5px black);
     
 }
