--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,12 @@ nav{
 .container{
     height: fit-content;
 }
+.nav-link:hover{
+    color: var(--chamoisee);
+}
+.navbar-nav .nav-link.active{
+    color: var(--caramel);
+}
 
 /* ------------- */
 .brand-div{
