--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('./root.css');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 .App {
   text-align: center;
@@ -14,8 +15,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  font-family: 'Poppins', sans-serif;
   color: #222;
 }
-
-
-
