--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,37 +1,34 @@
 @import url('../../root.css');
+@import url('../../root.css');
 
 .item{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
-    background: linear-gradient(to top left, var(--walnut-brown), var(--alpha-light));
-    box-shadow: 7px 7px 12px 0 rgba(0, 0, 0, 0.25),
-    -5px -5px 12px 0 rgba(255, 255, 255, 0.3);
-    padding: 1rem;
     width: 400px;
-    height: 400px;
-    /* border-radius: 10px; */
+    height: 450px;
+    background-color: #fff3;
+    box-shadow: 0 4px 30px #1115;
+    padding: 12px;
+    gap: 7px;
     text-shadow: 1px 1px 5px #1117;
-    
+    transition: all .3s;
 }
 
+.item p{
+    font-size: 1rem;
+}
 .item img{
-    width: 70%;
-    filter: drop-shadow(0 0 5px black);
-    
+    width: 300px;
+    box-shadow: 0 0 7px #000a;
 }
 .item:hover{
     cursor: pointer;
-    background: linear-gradient(to bottom right, var(--walnut-brown), var(--alpha-light));
-    box-shadow: inset -7px -7px 12px rgba(0, 0, 0, 0.25),
-    5px 5px 12px 0 rgba(255, 255, 255, 0.3);
+    background-color: #fff5 ;
+    box-shadow:  0 4px 20px #111a;
+    transform: scale(1.02);
 
-}
-.item:hover > img{
-    transform: scale(1.1);
-    transition: all .5s;
 }
 
 @media screen and (max-width: 600px){
@@ -43,8 +40,7 @@
     }
     
     .item img{
-        width: 50%;
-        filter: drop-shadow(0 0 5px black);
+        width: 90%;
     }
     .item:hover > img{
         transform: scale(1);
