--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     width: 400px;
-    height: 450px;
+    min-height: 500px;
     background-color: #fff3;
     box-shadow: 0 4px 30px #1115;
     padding: 12px;
@@ -28,7 +28,6 @@
     background-color: #fff5 ;
     box-shadow:  0 4px 20px #111a;
     transform: scale(1.02);
-
 }
 
 @media screen and (max-width: 600px){
@@ -42,19 +41,9 @@
     .item img{
         width: 90%;
     }
-    .item:hover > img{
-        transform: scale(1);
-    }
-    .item:hover{
-        cursor: pointer;
-        background: linear-gradient(to top left, var(--walnut-brown), var(--alpha-light));
-        box-shadow: 7px 7px 12px 0 rgba(0, 0, 0, 0.25),
-        -5px -5px 12px 0 rgba(255, 255, 255, 0.3);
-        }
     .item:active{
-        background: linear-gradient(to bottom right, var(--walnut-brown), var(--alpha-light));
-        box-shadow: inset -7px -7px 12px rgba(0, 0, 0, 0.25),
-        5px 5px 12px 0 rgba(255, 255, 255, 0.3);;    
+        background-color: #fff5 ;
+        box-shadow:  0 4px 20px #111a;
     }
     
 }
