--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -13,7 +13,8 @@
 
 .itemList-subtitulo{
     width: 100%;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
+    font-weight: bolder;
     text-shadow: 1px 1px 5px #1118;
 }
 
