--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -29,6 +29,17 @@
     box-shadow:  0 4px 20px #111a;
     transform: scale(1.02);
 }
+.btn-container .btn{
+    padding: 7px;
+    border: none;
+    background-color: #fff6;
+    color: #111;
+}
+
+.btn:hover{
+    background-color: #9994;
+}
+
 
 @media screen and (max-width: 600px){
     .item{
