--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,8 +1,8 @@
 .itemList{
     display: flex;
     flex-direction: row;
-    gap: 1.5rem;
-    justify-content: space-around;
+    gap: 2rem;
+    justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     flex-basis: 200px;
