--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -2,18 +2,22 @@
 @import url('../../root.css');
 
 .item{
+    color: #eee;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 400px;
     height: 530px;
-    background-color: #fff3;
-    box-shadow: 0 4px 30px #1115;
     padding: 12px;
     gap: 7px;
     text-shadow: 1px 1px 5px #1117;
     transition: all .3s;
+    border-radius: 25px;
+    background: linear-gradient(to bottom, var(--alpha-caramel), var(--walnut-brown));
+    box-shadow: inset 0 0 7px var(--walnut-brown);
+    filter: drop-shadow(0 0 7px var(--eerie-black));
+    
 }
 
 .item p{
@@ -22,12 +26,13 @@
 .item img{
     width: 300px;
     box-shadow: 0 0 7px #000a;
+    border-radius: 15px;
 }
 .item:hover{
     cursor: pointer;
-    background-color: #fff5 ;
-    box-shadow:  0 4px 20px #111a;
     transform: scale(1.02);
+    box-shadow: 0 0 12px var(--eerie-black);
+
 }
 .btn-container .btn{
     padding: 7px;
@@ -55,6 +60,10 @@
     .item:active{
         background-color: #fff5 ;
         box-shadow:  0 4px 20px #111a;
+    }
+    .item:hover{
+        transform: scale(1);
+        box-shadow: inset 0 0 7px var(--walnut-brown);
     }
     
 }
