--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,10 +1,18 @@
+@import url('../../root.css');
+
 .itemDetail{
+    color: #eee;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+    padding: 1rem;
     gap: 5rem;
+    background: linear-gradient(to bottom, var(--alpha-caramel), var(--walnut-brown));
+    box-shadow: inset 0 0 7px var(--walnut-brown);
+    filter: drop-shadow(0 0 7px var(--eerie-black));
+    border-radius: 15px;
 }
 
 .img-container{
@@ -15,6 +23,7 @@
 }
 .img-container img{
     width: 500px;
+    border-radius: 15px;
 }
 
 .info-container{
