--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -20,17 +20,19 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    color: #eee;
+    text-shadow: 0 2px 7px black;
+    font-size: 2rem;
+
+}
+.brand-div:hover{
+    color: #eee;
 }
 
 .brand-div .img-logo{
     width: 3rem;
     margin: 1rem;
-}
-
-.brand-div h2{
-    display: inline;
-    text-shadow: 0 2px 7px black;
-    font-size: 2rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -41,7 +43,7 @@ nav{
     }
 
     .brand-div .img-logo{
-        width: 2.7rem;
+        width: 10vmin;
         margin: .5rem;
     }
 }
