--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,10 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   background: linear-gradient(to bottom, var(--background), var(--caramel));
   background-size: contain;
   background-attachment: fixed;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
