--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -54,11 +54,6 @@
     align-items: flex-start;
 }
 
-.btn-container h2{
-    color: red;
-    border: 1px solid red;
-}
-
 .contador{
     align-self: flex-end;
     display: flex;
@@ -86,4 +81,27 @@
     width: 2rem;
     margin-left: .5rem;
     filter: invert(1);
+}
+
+@media screen and (max-width: 600px) {
+    .itemDetail{
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .img-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .img-container img{
+        width: 100%;
+    }
+
+    .contador{
+        align-self: center;
+    }
+  
 }
