--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -6,3 +6,12 @@
     padding: 2rem;
     margin: 1rem;
 }
+
+@media screen and (max-width: 600px){
+    .itemDetailContainer{
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+}
