--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -54,6 +54,20 @@
     align-items: flex-start;
 }
 
+.info-container .terminar{
+    text-decoration: none;
+    color: var(--light);
+    background-color: #fff8;
+    text-shadow: 0 0 7px black;
+    border: none;
+    border-radius: 25px;
+    padding: .5rem;
+    margin-right: 1rem;
+}
+.info-container .terminar:hover{
+    box-shadow: inset 0 0 7px black;
+}
+
 .contador{
     align-self: flex-end;
     display: flex;
@@ -62,26 +76,7 @@
     align-items: center;
     gap: 1rem;
 }
-.contador .btn-addToCart{
-    padding: .6rem;
-    border: none;
-    color: #eee;
-    text-shadow: 0 0 12px black;
-    background-color: #fff5;
-    box-shadow: inset 0 0 7px black;
-    border-radius: 15px;
-}
-.contador .btn-addToCart:hover{
-    box-shadow: 0 0 2px black, inset 0 0 5px black;
-}
-.contador .btn-addToCart:active{
-    opacity: .9;
-}
-.contador img{
-    width: 2rem;
-    margin-left: .5rem;
-    filter: invert(1);
-}
+
 
 @media screen and (max-width: 600px) {
     .itemDetail{
