main marge dev2

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -28,6 +28,7 @@
 }
 
 .btn-order{
+    font-size: 1.4rem;
     background-color: #fff2;
     box-shadow: inset 0 0 15px #1119;
     text-decoration: none;
