--- a/src/components/WspWidget/WspWidget.css
+++ b/src/components/WspWidget/WspWidget.css
@@ -12,7 +12,7 @@
     filter: drop-shadow(0 0  5px #fff3);
 }
 .wspWidget a img:hover{
-    filter: drop-shadow(0 0 7px var(--chamoisee));
+    filter: drop-shadow(0 0 5px #4b6);
     transition: all .3s;
 }
 
