--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,6 +3,7 @@
 .cart-container{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 1rem;
     background-color: #fff2;
     backdrop-filter: blur(12px);
@@ -12,7 +13,6 @@
     margin: 0 auto;
     margin-bottom: 3rem;
     padding: 1rem;
-
 }
 
 .cart-container .title{
@@ -21,17 +21,27 @@
     
 .cart-container .details-container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: center;
+    padding: .3rem;
 }
 .cart-container .details-container:nth-child(even){
-    background-color: #fff3;
+    background-color: #fff2;
+}
+.cart-container .details-container img{
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 100%;
+    margin: .5rem;
+    filter: drop-shadow(0 0 3px black);
 }
 
 .btn-order{
     font-size: 1.4rem;
-    background-color: #fff2;
-    box-shadow: inset 0 0 15px #1119;
+    background-color: var(--alpha-walnut-brown);
+    box-shadow:  0 0 15px var(--walnut-brown);
     text-decoration: none;
+    text-shadow: 1px 1px 5px var(--walnut-brown);
     color: #111;
     margin: 0 auto;
     width: fit-content;
@@ -39,7 +49,22 @@
     border-radius: 12px;
 }
 .btn-order:hover{
-    text-shadow: 1px 1px 5px var(--walnut-brown);
-    color: #111;
-    box-shadow: inset 0 0 18px var(--walnut-brown);
+    transition: all .3s;
+    color: var(--walnut-brown);
+    box-shadow: inset 0 0 25px var(--walnut-brown),
+     0px 0px 7px black;
+}
+
+@media screen and (max-width: 600px) {
+    .cart-container{
+        width: 100%;
+    }   
+
+    .btn-order{
+        font-size: 1rem;
+    }
+
+    .details-container h3{
+        font-size: 1.2rem;
+    }
 }
