--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -18,11 +18,25 @@
 .cart-container .title{
     font-size: 3rem;
 }
+
+.cart-container > img{
+    margin: 0 auto;
+    width: 5rem;
+    filter: drop-shadow(0 0 15px var(--walnut-brown));
+}
+
+.cart-container .product-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+
+}
     
 .cart-container .details-container{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: .3rem;
 }
 .cart-container .details-container:nth-child(even){
@@ -32,7 +46,6 @@
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 100%;
-    margin: .5rem;
     filter: drop-shadow(0 0 3px black);
 }
 
@@ -47,6 +60,7 @@
     width: fit-content;
     padding: .5rem;
     border-radius: 12px;
+    border: none;
 }
 .btn-order:hover{
     transition: all .3s;
@@ -54,6 +68,23 @@
     box-shadow: inset 0 0 25px var(--walnut-brown),
      0px 0px 7px black;
 }
+
+.clearCart{
+    font-size: 1rem;
+    justify-self: flex-end ;
+}
+
+.btn-remove-item{
+    border: none;
+    background: none;
+    text-decoration: underline;
+}
+.btn-remove-item:hover{
+    text-decoration: none;
+}
+
+
+
 
 @media screen and (max-width: 600px) {
     .cart-container{
@@ -63,8 +94,19 @@
     .btn-order{
         font-size: 1rem;
     }
+    .details-container img{
+        display: none;
+    }
 
     .details-container h3{
         font-size: 1.2rem;
+    }
+
+    .details-container button{
+        font-size: .8rem;
+    }
+
+    .details-container #precioUnitario{
+        display: none;
     }
 }
