--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,13 +1,12 @@
 @import url('../../root.css');
 
 .cartWidget-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-    margin: 2rem;
+    position: absolute;
+    margin: 1.5rem;
     border-radius: 1rem;
-    text-decoration: none;
+    right: 10%;
+    top: .5rem;
+
 }
 
 .cartWidget-container h3{
@@ -15,12 +14,14 @@
     font-size: 1rem;
 }
 .cartWidget-container .number{
-    align-self: flex-start;
     background-color: var(--walnut-brown);
+    position: absolute;
     border-radius: 100%;
-    width: 1.3rem;
-    height: 1.3rem;
-    padding: 3px;
+    padding: 2px;
+    width: 1.2rem;
+    height: 1.2rem;
+    top:0;
+    right: -.3rem;
 
 }
 
@@ -38,4 +39,23 @@
 .cart-btn{
     background-color: transparent;
     border:none;
+}
+
+@media screen and (max-width: 1000px){
+    .cartWidget-container{
+        /* position: abs; */
+        /* margin-left: 5rem; */
+        right: 20%;
+        top: 0;
+
+    }
+
+    .cartWidget-container h3{
+        font-size: .8rem;
+    }
+
+    .cartWidget-container .number{
+        padding: 3px;
+    }
+
 }
