--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -10,9 +10,8 @@
     padding: 1rem;
     gap: 5rem;
     background: linear-gradient(to bottom, var(--alpha-caramel), var(--walnut-brown));
-    box-shadow: inset 0 0 7px var(--walnut-brown);
-    filter: drop-shadow(0 0 7px var(--eerie-black));
-    border-radius: 15px;
+    box-shadow: inset 0 0 10px var(--walnut-brown);
+    filter: drop-shadow(0 0 10px var(--alpha-walnut-brown));
 }
 
 .img-container{
