--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -6,8 +6,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 2rem;
     padding: 2rem;
+    margin-bottom: 2rem;
     gap: 5rem;
     background: linear-gradient(to bottom, var(--alpha-caramel), var(--walnut-brown));
     box-shadow: inset 0 0 10px var(--walnut-brown);
