--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,10 +1,11 @@
 @import url('../../root.css');
+@import url('../ItemCount/ItemCount.css');
 
 .item{
     color: #eee;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 300px;
     height: 400px;
@@ -12,28 +13,28 @@
     gap: 1rem;
     text-shadow: 1px 1px 5px #1117;
     transition: all .3s;
-    /* border-radius: 25px; */
     background: linear-gradient(to bottom, var(--alpha-caramel), var(--walnut-brown));
     box-shadow: inset 0 0 7px var(--walnut-brown);
     filter: drop-shadow(0 0 7px var(--eerie-black));
+    text-decoration: none;
+}
+.item:hover{
+    transform: scale(1.02);
+    box-shadow: 0 0 8px var(--eerie-black);
+    color: #eee;
 }
 
 .item h2{
     font-size: 1.7rem;
 }
-
-.item p{
-    font-size: 1rem;
+.item h3{
+    font-size: 1.2rem;
 }
+
 .item img{
     width: 250px;
     box-shadow: 0 0 5px #0008;
     border-radius: 10px;
-}
-.item:hover{
-    transform: scale(1.02);
-    box-shadow: 0 0 8px var(--eerie-black);
-
 }
 .btn-container .btn{
     padding: 7px;
