--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -7,13 +7,13 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 300px;
-    height: 400px;
-    padding: 12px;
     gap: 1rem;
+    width: 300px;
+    height: 420px; /* ;D */
+    padding: 12px;
     text-shadow: 1px 1px 5px #1117;
     transition: all .3s;
-    background: linear-gradient(to bottom, var(--alpha-caramel), var(--walnut-brown));
+    background: linear-gradient(to bottom, var(--alpha-caramel),var(--walnut-brown), #fff3);
     box-shadow: inset 0 0 7px var(--walnut-brown);
     filter: drop-shadow(0 0 7px var(--eerie-black));
     text-decoration: none;
