--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -53,7 +53,13 @@
     align-items: flex-start;
 }
 
-.info-container .terminar{
+.info-container .btns-terminar{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.info-container .btns-terminar .terminar{
     text-decoration: none;
     color: var(--light);
     background-color: #fff8;
@@ -63,7 +69,7 @@
     padding: .5rem;
     margin-right: 1rem;
 }
-.info-container .terminar:hover{
+.info-container .btns-terminar .terminar:hover{
     box-shadow: inset 0 0 7px black;
 }
 
