--- a/src/components/WspWidget/WspWidget.css
+++ b/src/components/WspWidget/WspWidget.css
@@ -12,8 +12,8 @@
     filter: drop-shadow(0 0  5px #fff3);
 }
 .wspWidget a img:hover{
-    filter: drop-shadow(0 0 5px #4b6);
-    transition: all .3s;
+    opacity: .8;
+    transition: all .2s;
 }
 
 @media screen and (max-width: 600px) {
