--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -51,7 +51,13 @@
     filter: drop-shadow(0 0 3px black);
 }
 
-.btn-order{
+.fullCart-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.fullCart-container .btn-order{
     font-size: 1.4rem;
     background-color: var(--alpha-walnut-brown);
     box-shadow:  0 0 15px var(--walnut-brown);
@@ -64,14 +70,14 @@
     border-radius: 12px;
     border: none;
 }
-.btn-order:hover{
+.fullCart-container .btn-order:hover{
     transition: all .3s;
     color: var(--walnut-brown);
     box-shadow: inset 0 0 25px var(--walnut-brown),
      0px 0px 7px black;
 }
 
-.clearCart{
+.fullCart-container .clearCart{
     font-size: 1rem;
     justify-self: flex-end ;
 }
