--- a/src/root.css
+++ b/src/root.css
@@ -19,27 +19,9 @@
     --alpha-caramel: #BA855440;
 }
 *::selection{
-  background-color: #1117;
+  background-color: #111a;
   color: #eee;
 }
 
 /* scrollbar */
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-  background-color: var(--battleship-gray);
-}
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--eerie-black); 
-  border-radius: 10px;
-}
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background-color: #111;
-}
+::-webkit-scrollbar { display: none }
