--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -22,6 +22,7 @@
     border-radius: 15px;
     border: none;
     outline: none;
+    box-shadow:  0 0 7px white;
     transition: all .5s;
 }
 .form-container textarea{
