--- a/src/components/OrderDetails/OrderDetails.css
+++ b/src/components/OrderDetails/OrderDetails.css
@@ -10,6 +10,8 @@
        border-radius: 12px;
        background: linear-gradient(to top, var(--alpha-caramel), var(--walnut-brown));
        box-shadow: inset 0 0 10px var(--walnut-brown);  
+       color: #eee;
+       text-shadow: 1px 1px 5px #0006;
 }
     
 .order-container .order__data{
@@ -23,8 +25,8 @@
 
 }
 
-.bold{
-    font-weight: bolder;
+.whiteshadow{
+    text-shadow: 1px 1px 5px #eeea;
 }
 
 
@@ -69,6 +71,11 @@
     font-size: 1.3rem;
 }
 
+.order-container img{
+    width: 6rem;
+    filter: drop-shadow(0 0 7px #111a);
+}
+
 
 @media screen and (max-width: 600px) {
     .order-container{
@@ -90,5 +97,9 @@
 
     .order-container > p{
         width: 90vmin;
+    }
+
+    .order-container img{
+        width: 4rem;
     }
 }
