--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -22,7 +22,6 @@
 }
 .img-container img{
     width: 50vmin;
-    /* border-radius: 15px; */
 }
 
 .info-container{
@@ -30,7 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    height: 500px;
+    height: fit-content;
 }
 
 .info-container h2{
@@ -45,6 +44,21 @@
 .info-container p{
     text-align: left;
     font-size: 1.3rem;
+}
+
+.info-container textarea{
+    resize: none;
+    margin-top: .5rem;
+    padding: .5rem;
+    width: 60vmin;
+    height: 15vmin;
+    border-radius: 12px;
+    background-color: #fff3;
+}
+.info-container textarea:focus{
+    outline: none;
+    border: none;
+    box-shadow: 0 0 7px #fff;
 }
 
 .info-container .info-detail{
@@ -103,5 +117,10 @@
     .contador{
         align-self: center;
     }
-  
+
+    .info-container textarea{
+        width: 100%;
+        height: 40vmin;
+    }
+    
 }
