--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -22,7 +22,6 @@
 }
 .img-container img{
     width: 50vmin;
-    /* border-radius: 15px; */
 }
 
 .info-container{
@@ -30,7 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    height: 500px;
+    height: fit-content;
 }
 
 .info-container h2{
@@ -45,6 +44,21 @@
 .info-container p{
     text-align: left;
     font-size: 1.3rem;
+}
+
+.info-container textarea{
+    resize: none;
+    margin-top: .5rem;
+    padding: .5rem;
+    width: 60vmin;
+    height: 15vmin;
+    border-radius: 12px;
+    background-color: #fff3;
+}
+.info-container textarea:focus{
+    outline: none;
+    border: none;
+    box-shadow: 0 0 7px #fff;
 }
 
 .info-container .info-detail{
@@ -87,6 +101,7 @@
     .itemDetail{
         flex-direction: column;
         gap: 1rem;
+        width: 100%;
     }
 
     .img-container{
@@ -100,8 +115,17 @@
         width: 100%;
     }
 
-    .contador{
-        align-self: center;
+    .info-container{
+        width: 100vmin;
+        gap: 1rem;
     }
-  
+
+    .info-container :not(textarea){
+        padding-left: 7px;
+    }
+
+    .info-container textarea{
+        width: 100vw;
+        height: 40vmin;
+    }
 }
