--- a/src/components/OrderDetails/OrderDetails.css
+++ b/src/components/OrderDetails/OrderDetails.css
@@ -12,6 +12,12 @@
        box-shadow: inset 0 0 10px var(--walnut-brown);  
        color: #eee;
        text-shadow: 1px 1px 5px #0006;
+
+}
+
+.order-container > p{
+    width: 50vmin;
+    font-size: 1.3rem;
 }
     
 .order-container .order__data{
@@ -39,6 +45,7 @@
     gap: .5rem;
     margin-top: 2rem;
     padding: 0;
+
 }
 
 .order__list__total{
@@ -49,9 +56,11 @@
 .order-container .order__list .order__list__item{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     font-size: 1.2rem;
     width: 100%;
+
 }
 
 .order-container .order__list .order__list__header{
@@ -65,16 +74,12 @@
    
 }
 
-.order-container > p{
-    width: 50vmin;
-    font-size: 1.3rem;
-}
-
-.order-container .item-comment{
+.order-container .order__list .order__list__item .item-comment{
     font-size: 1rem;
     width: 60vmin;
     text-align: left;
     color: #ccc;
+    overflow-wrap: break-word;
 }
 
 .order-container h4{
